--- a/docs/guide/关于酒馆助手/常见问题/安装与更新问题.md
+++ b/docs/guide/关于酒馆助手/常见问题/安装与更新问题.md
@@ -14,14 +14,28 @@ order: 1
 **问题**:
 
 - 安装/更新提示成功但扩展未显示
-- 管理面板中无法勾选，呈灰色
+- 或者管理面板中无法勾选，呈灰色
 
-**解决**: 升级酒馆版本。扩展仅支持1.12.8及以上版本。
+**解决**: 升级酒馆版本。扩展仅支持1.12.10及以上版本。
 
 ## 安装时弹出红色错误弹窗
 
+根据弹窗提示的内容，可能有以下几种情况，请点击文字跳转至对应解决方案：
+
+- [`<Assets module> Cannot get assets list: Problem with assets URL`](#提示无法获取资源列表)
+- [`Server Error: Need to specify how to reconcile divergent branches.`](#提示更新失败，需要指定如何合并分支)
+- [`Server Error: fatal: unable to access 'https://gitlab.com/novi028/JS-Slash-Runner/': Recv failure:Connection was reset`](#错误信息中带有connect等类似字样)或者类似带有connection, connect等字样的错误信息
+
+### 提示无法获取资源列表
+
 **问题**: 红色错误弹窗提示 `<Assets module> Cannot get assets list: Problem with assets URL`  
 **解决**: 安装链接的填写位置错误，应该填写在[安装扩展](../安装与更新#sillytavern在线安装)按钮中的输入框，而不是“下载扩展和资源菜单”中的输入框。
+
+### 提示更新失败，需要指定如何合并分支
+
+**问题**: 红色错误弹窗提示 `Server Error: Need to specify how to reconcile divergent branches.`  
+**解决**: 删除扩展重新安装，脚本等设置会保留。
+
 
 ## 安装时弹出黄色警告弹窗
 
@@ -31,6 +45,7 @@ order: 1
 - [`Extension installation failed: Server Error:Error: spawn git ENOENT at ChildProcess.handel.onexit...`](#git-相关错误)
 - [`Extension installation failed: Server Error: Cloning into 'data/default-user/extensions/JS-Slash-Runner'... warning:url contains a newline in its pathcomponent`](#链接输入错误)
 - [`Extension installation failed: Server Error: Cloning into 'data/default-user/extensions/JS-Slash-Runner'... remote:Repository not found. fatal:Authentication failed for'https://github.com/NOVI028/JS-Slash-Runner.git/'`](#链接输入错误)
+- [`Server Error: fatal: unable to access 'https://gitlab.com/novi028/JS-Slash-Runner/': Recv failure:Connection was reset`](#错误信息中带有connect等类似字样)或者类似带有connection, connect等字样的错误信息
 
 ### 提示文件夹已存在
 
@@ -139,6 +154,11 @@ order: 1
 - 复制时在`Runner`前多了一个换行符，如`JS-Slash- Runner`
 - 使用屏幕识别导致链接中的大写字母`O`与数字`0`混淆，如`https://github.com/NOVI028/JS-Slash-Runner.git`
 - 其他导致链接错误的情况
+
+## 错误信息中带有`Connect`等类似字样
+
+**问题**: 弹窗提示 `Server Error: fatal: unable to access 'https://gitlab.com/novi028/JS-Slash-Runner/': Recv failure:Connection was reset` 或者类似带有`Connection`，`connect`等字样的错误信息  
+**解决**: 检查网络连接，如果使用需要代理的链接，请确保酒馆通过 VPN 连接网络，代理软件若有TUN模式也一并开启。
 
 ## 以上安装方法都失败
 
