--- a/docs/guide/功能详情/其他辅助功能/其他工具函数.md
+++ b/docs/guide/功能详情/其他辅助功能/其他工具函数.md
@@ -105,4 +105,13 @@ function getScriptId(): string;
 
 - **脚本 id**: `string`
 
+## toastr
+
+导出了 `toastr` 库, 你现在可以用 `toastr.error('内容', '标题')` 而不是 `triggerSlash('/echo severity=error title=标题 内容')` 来进行酒馆提示了
+
+- `toastr.info`
+- `toastr.success`
+- `toastr.warning`
+- `toastr.error`
+
 
