--- a/docs/guide/功能详情/变量操作/获取变量.md
+++ b/docs/guide/功能详情/变量操作/获取变量.md
@@ -7,7 +7,7 @@
 获取变量表。
 
 ```typescript
-function getVariables({ type, message_id }?: VariableOption): Record<string, any>
+function getVariables({ type, message_id, script_id }?: VariableOption): Record<string, any>
 ```
 ### 参数
 
@@ -27,6 +27,10 @@ function getVariables({ type, message_id }?: VariableOption): Record<string, any
   - 如果是负数，表示相对于最新消息的深度索引 (例如, `-1` 表示最新的消息, `-2` 表示倒数第二条)。
   - `'latest'` (默认值): 表示最新的消息楼层。
   - 此参数仅在 `type` 为 `'message'` 时有效。
+- **`script_id?`**: `string`
+  - 当 `type` 为 `'script'` 时，此参数指定目标脚本的ID。
+  - 如果在脚本中调用，则你可以用 `getScriptId()` 获取当前脚本的ID。
+  - 此参数仅在 `type` 为 `'script'` 时有效。
 
 ### 返回值
 - **包含变量键值对的对象**: `Record<string, any>`
@@ -47,6 +51,10 @@ if (_.has(variables, "神乐光.好感度")) {
 ```typescript [获取特定消息楼层的变量]
 // 获取倒数第二楼层的聊天变量
 const variables = getVariables({type: 'message', message_id: -2});
+```
+```typescript [获取脚本变量]
+// 在脚本内获取该脚本绑定的变量
+const variables = getVariables({type: 'script', script_id: getScriptId()});
 ```
 :::
 
