--- a/docs/guide/功能详情/变量操作/修改变量.md
+++ b/docs/guide/功能详情/变量操作/修改变量.md
@@ -33,6 +33,10 @@ async function replaceVariables(variables: Record<string, any>, { type, message_
   - 如果是负数，表示相对于最新消息的深度索引 (例如, `-1` 表示最新的消息, `-2` 表示倒数第二条)。
   - `'latest'` (默认值): 表示最新的消息楼层。
   - 此参数仅在 `type` 为 `'message'` 时有效。
+- **`script_id?`**: `string`
+  - 当 `type` 为 `'script'` 时，此参数指定目标脚本的ID。
+  - 如果在脚本中调用，则你可以用 `getScriptId()` 获取当前脚本的ID。
+  - 此参数仅在 `type` 为 `'script'` 时有效。
 
 ### 示例
 :::code-group 
@@ -47,6 +51,10 @@ let variables = getVariables();
 _.unset(variables, "神乐光.好感度");
 await replaceVariables(variables);
 // 执行后的聊天变量: `{神乐光: {}}`
+```
+```typescript [替换脚本变量]
+// 在脚本内替换该脚本绑定的变量
+await replaceVariables({神乐光: {好感度: 5, 认知度: 0}}, {type: 'script', script_id: getScriptId()});
 ```
 :::
 
@@ -82,6 +90,10 @@ async function updateVariablesWith(updater: VariablesUpdater, { type, message_id
   - 如果是负数，表示相对于最新消息的深度索引 (例如, `-1` 表示最新的消息, `-2` 表示倒数第二条)。
   - `'latest'` (默认值): 表示最新的消息楼层。
   - 此参数仅在 `type` 为 `'message'` 时有效。
+- **`script_id?`**: `string`
+  - 当 `type` 为 `'script'` 时，此参数指定目标脚本的ID。
+  - 如果在脚本中调用，则你可以用 `getScriptId()` 获取当前脚本的ID。
+  - 此参数仅在 `type` 为 `'script'` 时有效。
 
 ### 返回值
 - **更新后的变量表**: `Promise<Record<string, any>>`
@@ -131,6 +143,10 @@ async function insertOrAssignVariables(variables: Record<string, any>, { type, m
   - 如果是负数，表示相对于最新消息的深度索引 (例如, `-1` 表示最新的消息, `-2` 表示倒数第二条)。
   - `'latest'` (默认值): 表示最新的消息楼层。
   - 此参数仅在 `type` 为 `'message'` 时有效。
+- **`script_id?`**: `string`
+  - 当 `type` 为 `'script'` 时，此参数指定目标脚本的ID。
+  - 如果在脚本中调用，则你可以用 `getScriptId()` 获取当前脚本的ID。
+  - 此参数仅在 `type` 为 `'script'` 时有效。
 
 ### 示例
 
@@ -172,6 +188,10 @@ async function insertVariables(variables: Record<string, any>, { type, message_i
   - 如果是负数，表示相对于最新消息的深度索引 (例如, `-1` 表示最新的消息, `-2` 表示倒数第二条)。
   - `'latest'` (默认值): 表示最新的消息楼层。
   - 此参数仅在 `type` 为 `'message'` 时有效。
+- **`script_id?`**: `string`
+  - 当 `type` 为 `'script'` 时，此参数指定目标脚本的ID。
+  - 如果在脚本中调用，则你可以用 `getScriptId()` 获取当前脚本的ID。
+  - 此参数仅在 `type` 为 `'script'` 时有效。
 
 ### 示例
 
