--- a/docs/guide/功能详情/变量操作/删除变量.md
+++ b/docs/guide/功能详情/变量操作/删除变量.md
@@ -36,6 +36,10 @@ async function deleteVariable(variable_path: string, { type, message_id }?: Vari
   - 如果是负数，表示相对于最新消息的深度索引 (例如, `-1` 表示最新的消息, `-2` 表示倒数第二条)。
   - `'latest'` (默认值): 表示最新的消息楼层。
   - 此参数仅在 `type` 为 `'message'` 时有效。
+- **`script_id?`**: `string`
+  - 当 `type` 为 `'script'` 时，此参数指定目标脚本的ID。
+  - 如果在脚本中调用，则你可以用 `getScriptId()` 获取当前脚本的ID。
+  - 此参数仅在 `type` 为 `'script'` 时有效。
 
 ### 返回值
 - **布尔值**: `Promise<boolean>`
