--- a/docs/guide/功能详情/其他辅助功能/其他工具函数.md
+++ b/docs/guide/功能详情/其他辅助功能/其他工具函数.md
@@ -32,6 +32,38 @@ const text = substitudeMacros("{{char}} speaks in {{lastMessageId}}");
 text == "少女歌剧 speaks in 5";
 ```
 
+## registerMacroLike
+
+注册一个新的助手宏。
+
+```typescript
+function registerMacroLike(
+  regex: RegExp,
+  replace: (context: Context, substring: string, ...args: any[]) => string,
+): void;
+```
+
+### 参数
+
+#### `regex`
+
+- **类型**: `RegExp`
+- **描述**: 匹配的正则表达式
+
+#### `replace`
+
+- **类型**: `(context: Context, substring: string, ...args: any[]) => string`
+- **描述**: 针对匹配到的文本所要进行的替换
+
+### 示例
+
+```typescript
+registerMacroLike(
+  /<checkbox>(.*?)<checkbox>/gi,
+  (context: Context, substring: string, content: string) => { return content; });
+```
+
+
 ## getIframeName <Badge type="warning" text="🚫TavernHelper" />
 
 获取 iframe 的名称。
