--- a/docs/guide/关于酒馆助手/常见问题/安装与更新问题.md
+++ b/docs/guide/关于酒馆助手/常见问题/安装与更新问题.md
@@ -7,7 +7,7 @@ order: 1
 ## 安装后无任何响应
 
 **问题**: 安装扩展之后没有反应？  
-**解决**: 检查网络连接。如果使用需要代理的链接，请确保酒馆通过 VPN 连接网络，代理软件若有TUN模式也一并开启。
+**解决**: 检查网络连接。如果使用需要代理的链接，请确保酒馆通过 VPN 连接网络，代理软件若有TUN模式（或者叫虚拟网卡模式）也一并开启。
 
 ## 安装/更新成功但扩展不显示
 
@@ -142,6 +142,8 @@ order: 1
    git --version
    ```
 
+6. 如确认安装成功但仍提示错误，尝试重启电脑/Termux或酒馆
+
 ### 链接输入错误
 
 **问题**:
@@ -158,7 +160,7 @@ order: 1
 ## 错误信息中带有`Connect`等类似字样
 
 **问题**: 弹窗提示 `Server Error: fatal: unable to access 'https://gitlab.com/novi028/JS-Slash-Runner/': Recv failure:Connection was reset` 或者类似带有`Connection`，`connect`等字样的错误信息  
-**解决**: 检查网络连接，如果使用需要代理的链接，请确保酒馆通过 VPN 连接网络，代理软件若有TUN模式也一并开启。
+**解决**: 检查网络连接，如果使用需要代理的链接，请确保酒馆通过 VPN 连接网络，代理软件若有TUN模式（或者叫虚拟网卡模式）也一并开启。
 
 ## 以上安装方法都失败
 
