增加type中缺失的脚本

--- a/docs/guide/功能详情/变量操作/修改变量.md
+++ b/docs/guide/功能详情/变量操作/修改变量.md
@@ -23,6 +23,7 @@ async function replaceVariables(variables: Record<string, any>, { type, message_
 - **`type?`**: `string`
   - 指定操作的变量类型，默认为 `'chat'`。
   - 可选值:
+    - `'script'`: 针对特定脚本的变量。
     - `'message'`: 针对特定消息楼层的变量。
     - `'chat'`: 整个聊天会话的变量（默认）。
     - `'character'`: 当前角色卡的变量。
@@ -80,6 +81,7 @@ async function updateVariablesWith(updater: VariablesUpdater, { type, message_id
 - **`type?`**: `string`
   - 指定操作的变量类型，默认为 `'chat'`。
   - 可选值:
+    - `'script'`: 针对特定脚本的变量。
     - `'message'`: 针对特定消息楼层的变量。
     - `'chat'`: 整个聊天会话的变量（默认）。
     - `'character'`: 当前角色卡的变量。
@@ -133,6 +135,7 @@ async function insertOrAssignVariables(variables: Record<string, any>, { type, m
 - **`type?`**: `string`
   - 指定操作的变量类型，默认为 `'chat'`。
   - 可选值:
+    - `'script'`: 针对特定脚本的变量。
     - `'message'`: 针对特定消息楼层的变量。
     - `'chat'`: 整个聊天会话的变量（默认）。
     - `'character'`: 当前角色卡的变量。
@@ -178,6 +181,7 @@ async function insertVariables(variables: Record<string, any>, { type, message_i
 - **`type?`**: `string`
   - 指定操作的变量类型，默认为 `'chat'`。
   - 可选值:
+    - `'script'`: 针对特定脚本的变量。
     - `'message'`: 针对特定消息楼层的变量。
     - `'chat'`: 整个聊天会话的变量（默认）。
     - `'character'`: 当前角色卡的变量。
