--- a/docs/guide/功能详情/变量操作/获取变量.md
+++ b/docs/guide/功能详情/变量操作/获取变量.md
@@ -17,6 +17,7 @@ function getVariables({ type, message_id, script_id }?: VariableOption): Record<
 - **`type?`**: `string`
   - 指定操作的变量类型，默认为 `'chat'`。
   - 可选值:
+    - `'script'`: 针对特定脚本的变量。
     - `'message'`: 针对特定消息楼层的变量。
     - `'chat'`: 整个聊天会话的变量（默认）。
     - `'character'`: 当前角色卡的变量。
