--- a/docs/guide/功能详情/监听和发送事件.md
+++ b/docs/guide/功能详情/监听和发送事件.md
@@ -284,6 +284,29 @@ eventEmit("事件", "你好", 0);
 
 :::
 
+## eventEmitAndWait <Badge type="warning" text="🚫TavernHelper" />
+
+携带 `data` 而发送 `event_type` 事件并等待事件处理结束.
+
+```typescript
+function eventEmitAndWait<T extends EventType>(
+  event_type: T,
+  ...data: Parameters<ListenerType[T]>
+): void;
+```
+
+### 参数
+
+#### `event_type`
+
+- **类型**: [`EventType`](./监听和发送事件#事件列表)
+- **描述**: 要发送的事件
+
+#### `data`
+
+- **类型**: `any[]`
+- **描述**: 要随着事件发送的数据
+
 ## eventRemoveListener <Badge type="warning" text="🚫TavernHelper" />
 
 让 `listener` 取消对 `event_type` 的监听。
