--- a/docs/guide/功能详情/世界书/修改世界书.md
+++ b/docs/guide/功能详情/世界书/修改世界书.md
@@ -2,6 +2,23 @@
 
 <CustomTOC />
 
+## setChatLorebook
+
+设置当前聊天绑定的世界书。
+
+```typescript
+async function setChatLorebook(lorebook: string | null): Promise<void>;
+    
+```
+
+### 参数
+
+#### lorebook
+
+- **类型**: `string | null`
+- **描述**: 要绑定的世界书名称，设为 null 表示移除绑定
+
+
 ## setLorebookSettings
 
 修改世界书全局设置。
@@ -42,96 +59,6 @@ if (_.isEqual(_.merge({}, settings, expected_settings), settings)) {
 ```
 
 :::
-
-## replaceLorebookEntries
-
-完全替换世界书的所有条目。
-
-```typescript
-async function replaceLorebookEntries(
-  lorebook: string, 
-  entries: Partial<LorebookEntry>[]
-): Promise<void>;
-```
-
-### 参数
-
-#### `lorebook`
-
-- **类型**: `string`
-- **描述**: 世界书名称
-
-#### `entries`
-
-- **类型**: `Partial<LorebookEntry>[]`
-- **描述**: 要用于替换的世界书条目数组。如果 `uid` 没有设置或有重复则会新设置 `uid`；如果某些字段没设置，则会使用酒馆默认会设置的值。
-
-### 示例
-
-:::code-group
-
-```typescript [禁止所有条目递归，保持其他设置不变]
-const lorebook = "eramgt少女歌剧";
-const entries = await getLorebookEntries(lorebook);
-await replaceLorebookEntries(
-  lorebook, 
-  entries.map(entry => ({ ...entry, prevent_recursion: true }))
-);
-```
-
-```typescript [删除所有名字中包含 神乐光 的条目]
-const lorebook = "eramgt少女歌剧";
-const entries = await getLorebookEntries(lorebook);
-_.remove(entries, entry => entry.comment.includes('神乐光'));
-await replaceLorebookEntries(lorebook, entries);
-```
-
-:::
-
-## updateLorebookEntriesWith
-
-用自定义函数更新世界书条目。
-
-:::code-group
-
-```typescript [updateLorebookEntriesWith]
-async function updateLorebookEntriesWith(
-  lorebook: string,
-  updater: LorebookEntriesUpdater
-): Promise<LorebookEntry[]>;
-```
-
-```typescript [LorebookEntriesUpdater]
-type LorebookEntriesUpdater =
-  | ((entries: LorebookEntry[]) => Partial<LorebookEntry>[])
-  | ((entries: LorebookEntry[]) => Promise<Partial<LorebookEntry>[]>);
-```
-:::
-### 参数
-
-#### `lorebook`
-
-- **类型**: `string`
-- **描述**: 世界书名称
-
-#### `updater`
-
-- **类型**: `LorebookEntriesUpdater`
-- **描述**: 用于更新世界书的函数。它应该接收世界书条目作为参数，并返回更新后的世界书条目。
-
-### 返回值
-
-- **更新后的世界书条目**: `LorebookEntry[]`
-
-### 示例
-
-```typescript
-// 删除所有名字中包含 `神乐光` 的条目
-await updateLorebookEntriesWith(
-  "eramgt少女歌剧", 
-  entries => entries.filter(entry => !entry.comment.includes('神乐光'))
-);
-```
 
 ## setCurrentCharLorebooks
 
