--- a/docs/guide/功能详情/楼层消息/修改消息.md
+++ b/docs/guide/功能详情/楼层消息/修改消息.md
@@ -42,32 +42,27 @@ interface SetChatMessagesOption {
 
 :::code-group
 
-```typescript [修改楼层 5 当前消息页的文本]
-await setChatMessages([{ message_id: 5, message: "设置楼层 5 当前消息页的文本" }]);
+```typescript [修改第 10 楼被 ai 使用的消息页的正文]
+await setChatMessages([{message_id: 10, message: '新的消息'}]);
 ```
 
-```typescript [修改楼层 5 第 3 页的文本（设置 swipe_id）]
-await setChatMessages([{ 
-  message_id: 5, 
-  swipe_id: 3,
-  message: "设置楼层 5 第 3 页的文本" 
-}]);
-```
-
-```typescript [修改楼层 5 的数据但不更新显示]
-await setChatMessages([{ message_id: 5, data: { 神乐光好感度: 5 } }], { refresh: 'none' });
+```typescript [设置开局]
+await setChatMessages([{message_id: 0, swipes: ['开局1', '开局2']}])
 ```
 
 ```typescript [切换为开局 3]
-await setChatMessages([{ message_id: 0, swipe_id: 2 }]);
+await setChatMessages([{message_id: 0, swipe_id: 2}]);
+```
+
+```typescript [补充倒数第二楼的楼层变量]
+const chat_message = getChatMessages(-2)[0];
+_.set(chat_message.data, '神乐光好感度', 5);
+await setChatMessages([{message_id: 0, data: chat_message.data}], {refresh: 'none'});
 ```
 
 ```typescript [隐藏所有楼层]
 const last_message_id = getLastMessageId();
-await setChatMessages(_.range(last_message_id + 1).map(message_id => ({ 
-  message_id, 
-  is_hidden: true 
-})));
+await setChatMessages(_.range(last_message_id + 1).map(message_id => ({message_id, is_hidden: true})));
 ```
 
 :::
