--- a/docs/guide/关于酒馆助手/安装与更新.md
+++ b/docs/guide/关于酒馆助手/安装与更新.md
@@ -6,6 +6,8 @@ order: 0
 
 ## 安装方法
 
+安装中遇到问题请看[安装与更新问题](./常见问题/安装与更新问题.md)
+
 ### SillyTavern在线安装
 
 点击SillyTavern顶部的扩展图标，选择安装扩展，在弹出框内**二选一**任选一个链接填入：
@@ -41,6 +43,8 @@ order: 0
 :::
 
 ## 更新方法
+
+更新中遇到问题请看[安装与更新问题](./常见问题/安装与更新问题.md)
 
 ### SillyTavern扩展管理器更新
 
