--- a/docs/guide/关于酒馆助手/常见问题/安装与更新问题.md
+++ b/docs/guide/关于酒馆助手/常见问题/安装与更新问题.md
@@ -34,7 +34,7 @@ order: 1
 ### 提示更新失败，需要指定如何合并分支
 
 **问题**: 红色错误弹窗提示 `Server Error: Need to specify how to reconcile divergent branches.`  
-**解决**: 删除扩展重新安装，脚本等设置会保留。
+**解决**: 删除扩展重新安装，数据（开关设置、脚本等）会保留。
 
 
 ## 安装时弹出黄色警告弹窗
