--- a/docs/guide/关于酒馆助手/编写前端或脚本的推荐方案.md
+++ b/docs/guide/关于酒馆助手/编写前端或脚本的推荐方案.md
@@ -4,4 +4,11 @@ order: 3
 
 # 编写前端或脚本的推荐方案
 
-请参考[文档](https://sillytavern-stage-girls-dog.readthedocs.io/工具经验/酒馆助手编写环境配置)或[络络对文档的直播教程](https://discord.com/channels/1134557553011998840/1372487825471176805)
+如果你想要编写
+
+- 酒馆美化
+- 角色卡美化或状态栏
+- 酒馆助手前端界面
+- 酒馆助手脚本
+
+**请务必阅读[文档](https://sillytavern-stage-girls-dog.readthedocs.io/工具经验/酒馆助手编写环境配置)或[络络对文档的直播教程](https://discord.com/channels/1134557553011998840/1372487825471176805).**
