正确使用酒馆助手

--- a/docs/guide/功能详情/世界书/创建世界书条目.md
+++ b/docs/guide/功能详情/世界书/创建世界书条目.md
@@ -1,5 +1,9 @@
 # 创建世界书条目
 
+:::tip
+请务必先阅读[如何正确使用酒馆助手](/guide/基本用法/如何正确使用酒馆助手.md)
+:::
+
 <CustomTOC />
 
 ## createLorebookEntries
@@ -49,4 +53,4 @@ console.log("新创建的条目 UID:", result.new_uids);
 
 :::info
 有关 `LorebookEntry` 接口的完整定义，请参考 [获取世界书条目](./获取世界书条目.md#getlorebookentries) 文档。
-::: 
+:::
