--- a/docs/guide/功能详情/世界书/获取世界书.md
+++ b/docs/guide/功能详情/世界书/获取世界书.md
@@ -1,5 +1,9 @@
 # 获取世界书
 
+:::tip
+请务必先阅读[如何正确使用酒馆助手](/guide/基本用法/如何正确使用酒馆助手.md)
+:::
+
 <CustomTOC />
 
 ## getLorebooks
@@ -120,13 +124,16 @@ interface GetCharLorebooksOption {
 ### 示例
 
 :::code-group
+
 ```typescript [获取当前角色卡绑定的所有世界书]
 const lorebooks = getCharLorebooks();
 ```
+
 ```typescript [获取当前角色卡绑定的主要世界书]
 const lorebooks = getCharLorebooks({ type: "primary" });
 console.log(lorebooks.primary);
 ```
+
 :::
 
 ## getCurrentCharPrimaryLorebook
@@ -186,4 +193,3 @@ async function getOrCreateChatLorebook(lorebook?: string): Promise<string>;
 ### 返回值
 
 - **聊天世界书名称**: `string`
-
