--- a/docs/guide/功能详情/世界书/获取世界书条目.md
+++ b/docs/guide/功能详情/世界书/获取世界书条目.md
@@ -1,5 +1,9 @@
 # 获取世界书条目
 
+:::tip
+请务必先阅读[如何正确使用酒馆助手](/guide/基本用法/如何正确使用酒馆助手.md)
+:::
+
 <CustomTOC />
 
 ## getLorebookEntries
@@ -93,4 +97,4 @@ const entries = await getLorebookEntries("eramgt少女歌剧");
 const filteredEntries = entries.filter(entry => entry.content.includes("神乐光"));
 ```
 
-::: 
+:::
