--- a/docs/guide/功能详情/其他辅助功能/其他工具函数.md
+++ b/docs/guide/功能详情/其他辅助功能/其他工具函数.md
@@ -4,6 +4,10 @@ order: 99
 
 # 其他工具函数
 
+:::tip
+请务必先阅读[如何正确使用酒馆助手](/guide/基本用法/如何正确使用酒馆助手.md)
+:::
+
 <CustomTOC />
 
 ## substitudeMacros
@@ -62,7 +66,6 @@ registerMacroLike(
   /<checkbox>(.*?)<checkbox>/gi,
   (context: Context, substring: string, content: string) => { return content; });
 ```
-
 
 ## getIframeName <Badge type="warning" text="🚫TavernHelper" />
 
@@ -145,5 +148,3 @@ function getScriptId(): string;
 - `toastr.success`
 - `toastr.warning`
 - `toastr.error`
-
-
