--- a/docs/guide/功能详情/变量操作/修改变量.md
+++ b/docs/guide/功能详情/变量操作/修改变量.md
@@ -1,8 +1,13 @@
 # 修改变量
 
+:::tip
+请务必先阅读[如何正确使用酒馆助手](/guide/基本用法/如何正确使用酒馆助手.md)
+:::
+
 <CustomTOC />
 
 ## replaceVariables
+
 完全替换变量表。
 
 之所以提供这么直接的函数, 是因为酒馆助手内置了 lodash 库：
@@ -15,9 +20,11 @@ async function replaceVariables(variables: Record<string, any>, { type, message_
 ### 参数
 
 #### `variables`
+
 要用于替换的变量表
 
 #### `option?`
+
 一个可选的配置对象，包含以下属性：
 
 - **`type?`**: `string`
@@ -40,12 +47,15 @@ async function replaceVariables(variables: Record<string, any>, { type, message_
   - 此参数仅在 `type` 为 `'script'` 时有效。
 
 ### 示例
-:::code-group 
+
+:::code-group
+
 ```typescript [替换聊天变量]
 // 执行前的聊天变量: `{爱城华恋: {好感度: 5}}`
 await replaceVariables({神乐光: {好感度: 5, 认知度: 0}});
 // 执行后的聊天变量: `{神乐光: {好感度: 5, 认知度: 0}}`
 ```
+
 ```typescript [删除变量]
 // 执行前的聊天变量: `{神乐光: {好感度: 5}}`
 let variables = getVariables();
@@ -53,13 +63,16 @@ _.unset(variables, "神乐光.好感度");
 await replaceVariables(variables);
 // 执行后的聊天变量: `{神乐光: {}}`
 ```
+
 ```typescript [替换脚本变量]
 // 在脚本内替换该脚本绑定的变量
 await replaceVariables({神乐光: {好感度: 5, 认知度: 0}}, {type: 'script', script_id: getScriptId()});
 ```
+
 :::
 
 ## updateVariablesWith
+
 用函数更新变量表。
 
 ```typescript
@@ -73,9 +86,11 @@ async function updateVariablesWith(updater: VariablesUpdater, { type, message_id
 ### 参数
 
 #### `updater`
+
 用于更新变量表的函数，接收变量表作为参数，返回更新后的变量表。
 
-#### `option?` 
+#### `option?`
+
 一个可选的配置对象，包含以下属性：
 
 - **`type?`**: `string`
@@ -98,22 +113,28 @@ async function updateVariablesWith(updater: VariablesUpdater, { type, message_id
   - 此参数仅在 `type` 为 `'script'` 时有效。
 
 ### 返回值
+
 - **更新后的变量表**: `Promise<Record<string, any>>`
 
 ### 示例
+
 :::code-group
+
 ```typescript [删除变量]
 // 执行前的聊天变量: `{神乐光: {好感度: 5}}`
 await updateVariablesWith(variables => {_.unset(variables, "神乐光.好感度"); return variables;});
 // 执行后的聊天变量: `{神乐光: {}}`
 ```
+
 ```typescript [更新变量值]
 // 更新 "爱城华恋.好感度" 为原来的 2 倍, 如果该变量不存在则设置为 0
 await updateVariablesWith(variables => _.update(variables, "爱城华恋.好感度", value => value ? value * 2 : 0));
 ```
+
 :::
 
 ## insertOrAssignVariables
+
 插入或修改变量值，取决于变量是否存在。
 
 ```typescript
@@ -125,11 +146,14 @@ async function insertOrAssignVariables(variables: Record<string, any>, { type, m
 ### 参数
 
 #### `variables`
+
 要更新的变量：
+
 - 如果变量不存在，则新增该变量
 - 如果变量已经存在，则修改该变量的值
 
 #### `option?`
+
 一个可选的配置对象，包含以下属性：
 
 - **`type?`**: `string`
@@ -160,6 +184,7 @@ await insertOrAssignVariables({爱城华恋: {好感度: 10}, 神乐光: {好感
 ```
 
 ## insertVariables
+
 插入新变量, 如果变量已经存在则什么也不做。
 
 ```typescript
@@ -171,11 +196,14 @@ async function insertVariables(variables: Record<string, any>, { type, message_i
 ### 参数
 
 #### `variables`
+
 要插入的变量：
+
 - 如果变量不存在，则新增该变量
 - 如果变量已经存在，则什么也不做
 
 #### `option?`
+
 一个可选的配置对象，包含以下属性：
 
 - **`type?`**: `string`
