--- a/docs/guide/功能详情/变量操作/删除变量.md
+++ b/docs/guide/功能详情/变量操作/删除变量.md
@@ -1,8 +1,13 @@
 # 删除变量
 
+:::tip
+请务必先阅读[如何正确使用酒馆助手](/guide/基本用法/如何正确使用酒馆助手.md)
+:::
+
 <CustomTOC />
 
 ## deleteVariable
+
 删除变量, 如果变量不存在则什么也不做。
 
 ```typescript
@@ -16,11 +21,14 @@ async function deleteVariable(variable_path: string, { type, message_id }?: Vari
 ### 参数
 
 #### `variable_path`
+
 要删除的变量路径：
+
 - 如果变量不存在，则什么也不做
 - 如果变量已经存在，则删除该变量
 
 #### `option?`
+
 一个可选的配置对象，包含以下属性：
 
 - **`type?`**: `string`
@@ -43,6 +51,7 @@ async function deleteVariable(variable_path: string, { type, message_id }?: Vari
   - 此参数仅在 `type` 为 `'script'` 时有效。
 
 ### 返回值
+
 - **布尔值**: `Promise<boolean>`
 
 ### 示例
