--- a/docs/guide/功能详情/变量操作/获取变量.md
+++ b/docs/guide/功能详情/变量操作/获取变量.md
@@ -1,5 +1,9 @@
 # 获取变量
 
+:::tip
+请务必先阅读[如何正确使用酒馆助手](/guide/基本用法/如何正确使用酒馆助手.md)
+:::
+
 <CustomTOC />
 
 ## getVariables
@@ -9,9 +13,11 @@
 ```typescript
 function getVariables({ type, message_id, script_id }?: VariableOption): Record<string, any>
 ```
+
 ### 参数
 
 #### `option?`
+
 一个可选的配置对象，包含以下属性：
 
 - **`type?`**: `string`
@@ -34,14 +40,18 @@ function getVariables({ type, message_id, script_id }?: VariableOption): Record<
   - 此参数仅在 `type` 为 `'script'` 时有效。
 
 ### 返回值
+
 - **包含变量键值对的对象**: `Record<string, any>`
 
 ### 示例
+
 :::code-group
+
 ```typescript [获取所有聊天变量并弹窗输出结果]
 const variables = getVariables();
 alert(variables);
 ```
+
 ```typescript [获取所有全局变量]
 const variables = getVariables({type: 'global'});
 // 酒馆助手内置了 lodash 库，你能用它做很多事，比如查询某个变量是否存在
@@ -49,17 +59,21 @@ if (_.has(variables, "神乐光.好感度")) {
   /* ... */
 }
 ```
+
 ```typescript [获取特定消息楼层的变量]
 // 获取倒数第二楼层的聊天变量
 const variables = getVariables({type: 'message', message_id: -2});
 ```
+
 ```typescript [获取脚本变量]
 // 在脚本内获取该脚本绑定的变量
 const variables = getVariables({type: 'script', script_id: getScriptId()});
 ```
+
 :::
 
 ## 在提示词中获取变量
+
 你可以通过以下格式在提示词中获取变量：
 
 ### 变量示例
