--- a/docs/guide/功能详情/接口访问.md
+++ b/docs/guide/功能详情/接口访问.md
@@ -1,5 +1,9 @@
 # 访问接口
 
+:::tip
+请务必先阅读[如何正确使用酒馆助手](/guide/基本用法/如何正确使用酒馆助手.md)
+:::
+
 <CustomTOC />
 
 ## SillyTavern
@@ -41,5 +45,3 @@ alert(TavernHelper.getCharAvatarPath());
 ::: warning
 在功能详情文档中，未导出到 window 对象的函数会使用 `🚫TavernHelper` 标记。这些函数在扩展中无法直接通过 `TavernHelper` 调用。
 :::
-
-
