--- a/docs/guide/功能详情/楼层消息/修改消息.md
+++ b/docs/guide/功能详情/楼层消息/修改消息.md
@@ -1,5 +1,9 @@
 # 修改消息
 
+:::tip
+请务必先阅读[如何正确使用酒馆助手](/guide/基本用法/如何正确使用酒馆助手.md)
+:::
+
 <CustomTOC />
 
 ## setChatMessages
@@ -137,4 +141,4 @@ await rotateChatMessages(1, getLastMessageId() - 2, getLastMessageId() + 1);
 await rotateChatMessages(0, 3, getLastMessageId() + 1);
 ```
 
-::: 
+:::
