--- a/docs/guide/功能详情/楼层消息/创建消息.md
+++ b/docs/guide/功能详情/楼层消息/创建消息.md
@@ -1,5 +1,9 @@
 # 创建消息
 
+:::tip
+请务必先阅读[如何正确使用酒馆助手](/guide/基本用法/如何正确使用酒馆助手.md)
+:::
+
 <CustomTOC />
 
 ## createChatMessages
@@ -44,22 +48,27 @@ interface CreateChatMessagesOption {
 `ChatMessageCreating` 包含以下字段：
 
 `name?`
+
 - **类型**: `string`
 - **描述**: 消息发送者名称
 
 `role`
+
 - **类型**: `'system' | 'assistant' | 'user'`
 - **描述**: 消息角色
 
 `is_hidden?`
+
 - **类型**: `boolean`
 - **描述**: 是否隐藏该消息
 
 `message`
+
 - **类型**: `string`
 - **描述**: 消息内容
 
 `data?`
+
 - **类型**: `Record<string, any>`
 - **描述**: 消息绑定的数据
 
@@ -96,4 +105,4 @@ await createChatMessages([{
 }]);
 ```
 
-::: 
+:::
