--- a/docs/guide/功能详情/楼层消息/删除消息.md
+++ b/docs/guide/功能详情/楼层消息/删除消息.md
@@ -1,5 +1,9 @@
 # 删除消息
 
+:::tip
+请务必先阅读[如何正确使用酒馆助手](/guide/基本用法/如何正确使用酒馆助手.md)
+:::
+
 <CustomTOC />
 
 ## deleteChatMessages
@@ -51,4 +55,4 @@ await deleteChatMessages([10, 15, -2, getLastMessageId()]);
 await deleteChatMessages(_.range(getLastMessageId() + 1));
 ```
 
-::: 
+:::
