--- a/docs/guide/功能详情/楼层消息/获取消息.md
+++ b/docs/guide/功能详情/楼层消息/获取消息.md
@@ -1,5 +1,9 @@
 # 获取消息
 
+:::tip
+请务必先阅读[如何正确使用酒馆助手](/guide/基本用法/如何正确使用酒馆助手.md)
+:::
+
 <CustomTOC />
 
 ## getChatMessages
@@ -77,10 +81,12 @@ interface ChatMessageSwiped {
 ### 返回值
 
 如果 `include_swipes` 为 `false`（默认情况）:
+
 - 返回 `ChatMessage[]`，每条消息只包含被 AI 使用的消息页
 - 按 message_id 从低到高排序
 
 如果 `include_swipes` 为 `true`:
+
 - 返回 `ChatMessageSwiped[]`，每条消息包含所有消息页
 - 按 message_id 从低到高排序
 
@@ -167,17 +173,22 @@ function retrieveDisplayedMessage(message_id: number): JQuery<HTMLDivElement> {
   );
 }
 ```
+
 ### 参数
+
 #### `message_id`
 
 - **类型**: `number`
 - **描述**: 要获取的消息楼层号，必须要酒馆页面显示了该消息楼层才能获取到
 
 ### 返回值
+
 - **对应的JQuery**: 如果能获取到该消息楼层的 html, 则返回对应的 JQuery; 否则返回空 JQuery
 
 ### 示例
+
 :::code-group
+
 ```typescript [获取第 0 楼的消息内容文本]
 const text = retrieveDisplayedMessage(0).text();
 ```
@@ -191,4 +202,5 @@ retrieveDisplayedMessage(0).append(
   formatAsDisplayedMessage("{{char}} speaks in {{lastMessageId}}")
 );
 ```
-::: 
+
+:::
