--- a/docs/guide/功能详情/版本操作.md
+++ b/docs/guide/功能详情/版本操作.md
@@ -1,4 +1,9 @@
 # 酒馆助手版本操作
+
+:::tip
+请务必先阅读[如何正确使用酒馆助手](/guide/基本用法/如何正确使用酒馆助手.md)
+:::
+
 <CustomTOC />
 
 ## getTavernHelperVersion
@@ -8,10 +13,13 @@
 ```typescript
 async function getTavernHelperVersion(): Promise<string>;
 ```
+
 ### 返回值
+
 - **酒馆助手版本号**: `string`
 
 ## updateTavernHelper
+
 尝试主动更新酒馆助手。
 
 ```typescript
@@ -19,4 +27,5 @@ async function updateTavernHelper(): Promise<boolean>;
 ```
 
 ### 返回值
+
 - **是否更新成功**: `boolean`
