--- a/docs/guide/功能详情/监听和发送事件.md
+++ b/docs/guide/功能详情/监听和发送事件.md
@@ -1,5 +1,9 @@
 # 监听和发送事件
 
+:::tip
+请务必先阅读[如何正确使用酒馆助手](/guide/基本用法/如何正确使用酒馆助手.md)
+:::
+
 扩展允许你设置当发生某种事件时，运行想要的函数。例如，你也许想在玩家擅自更改你的世界书时警告玩家。
 
 可以处理的事件请查看[事件列表](./监听和发送事件#事件列表)。
@@ -52,6 +56,7 @@ function detectMessageEdited(message_id) {
   alert(`你刚刚更新了第 ${message_id} 条聊天消息对吧😡`);
 }
 ```
+
 :::
 
 ## eventOnButton <Badge type="warning" text="🚫TavernHelper" />
@@ -368,7 +373,7 @@ function eventClearListener(listener: Function): void;
 - **类型**: `Function`
 - **描述**: 要取消注册的函数
 
-## eventClearAll <Badge type="warning" text="🚫TavernHelper" /> 
+## eventClearAll <Badge type="warning" text="🚫TavernHelper" />
 
 取消本 iframe 中对所有事件的所有监听。
 
@@ -381,6 +386,7 @@ function eventClearAll(): void;
 我们还提供了 Quick Reply 命令 `/event-emit`，允许你通过在快速回复中发送事件来触发 js 代码。
 
 :::code-group
+
 ```plaintext [快速回复部分]
 /event-emit event="随便什么名称" data="这是一个 数据" data={{user}}
 ```
@@ -388,6 +394,7 @@ function eventClearAll(): void;
 ```typescript [iframe 部分]
 eventOn("随便什么名字", (data1, data2) => { console.info(data1, data2); });
 ```
+
 :::
 当我们按下该快速回复的按钮后，正在监听 "事件名称" 消息频道的 js 代码将会获得 `data` 并开始执行。
 
