--- a/docs/guide/功能详情/获取角色卡信息.md
+++ b/docs/guide/功能详情/获取角色卡信息.md
@@ -1,5 +1,9 @@
 # 获取角色卡信息
 
+:::tip
+请务必先阅读[如何正确使用酒馆助手](/guide/基本用法/如何正确使用酒馆助手.md)
+:::
+
 <CustomTOC />
 
 ## getCharCardData
@@ -143,6 +147,7 @@ async function getCharData(name: string, allowAvatar: boolean = false): Promise<
  * @property {number} display_index - 显示顺序
  */
 ```
+
 :::
 
 ### 参数
@@ -164,6 +169,7 @@ async function getCharData(name: string, allowAvatar: boolean = false): Promise<
 ### 示例
 
 :::code-group
+
 ```typescript[获取当前打开的角色卡信息]
 const charData = await getCharData();
 console.log(charData);
@@ -178,12 +184,12 @@ console.log(charData);
 const charDataWithAvatar = await getCharData("少女歌剧2.png", true);
 console.log(charDataWithAvatar);
 ```
+
 :::
 
 ## getCharAvatarPath
 
 获取角色头像的URL路径。
-
 
 ```typescript
 async function getCharAvatarPath(name: string, allowAvatar: boolean = false): Promise<string | null>;
@@ -221,6 +227,7 @@ console.log(avatarPath);
 ```typescript [getChatHistoryBrief]
 async function getChatHistoryBrief(name: string, allowAvatar: boolean = false): Promise<ChatHistoryBrief[] | null>;
 ```
+
 ```typescript [ChatHistoryBrief]
 interface ChatHistoryBrief{
   chat_item: number; // 楼层总数
@@ -230,6 +237,7 @@ interface ChatHistoryBrief{
   mes: string; // 最后一条消息的内容
 }
 ```
+
 :::
 
 ### 参数
@@ -309,6 +317,7 @@ interface ChatHistoryDetail {
 ### 示例
 
 :::code-group
+
 ```typescript [获取某一角色卡的聊天历史]
 const historyBrief = await getChatHistoryBrief("少女歌剧");
 const historyDetail = await getChatHistoryDetail(historyBrief);
@@ -325,5 +334,5 @@ for (const name of charNames) {
 
 const historyDetail = await getChatHistoryDetail(allHistoryBriefs);
 ```
-:::
 
+:::
