--- a/docs/guide/功能详情/触发快速回复命令.md
+++ b/docs/guide/功能详情/触发快速回复命令.md
@@ -1,17 +1,23 @@
 # 触发 Slash Command
 
+:::tip
+请务必先阅读[如何正确使用酒馆助手](/guide/基本用法/如何正确使用酒馆助手.md)
+:::
+
 我们可以在嵌入的 iframe 中执行 SillyTavern 内部的 Slash 命令 (斜杠命令), 如 `/run`、`/echo` 等。
 
 <CustomTOC />
 
 ::: info 参考
 你可以在这些地方查看SillyTavern的全部 Slash（快速回复） 命令：
+
 - 在 SillyTavern 消息发送框中输入并发送`/help slash`
 - 点击酒馆助手扩展界面右上角的`编写参考-酒馆命令`
 - 查看[SillyTavern 脚本命令自查手册](https://rentry.org/sillytavern-script-book)
 :::
 
 ## triggerSlash
+
 运行 Slash 命令, 注意如果命令写错了将不会有任何反馈。
 
 ```typescript
@@ -19,7 +25,9 @@ async function triggerSlash(command: string): Promise<string>;
 ```
 
 ### 参数
+
 #### command
+
 要运行的 Slash 命令
 
 ### 返回值
@@ -27,6 +35,7 @@ async function triggerSlash(command: string): Promise<string>;
 - **Slash 管道结果**: 如果命令出错或执行了 `/abort` 则返回 `undefined`
 
 ### 示例
+
 ::: code-group
 
 ```typescript [在酒馆界面弹出提示语 hello!]
