--- a/docs/guide/功能详情/请求生成.md
+++ b/docs/guide/功能详情/请求生成.md
@@ -1,5 +1,9 @@
 # 请求生成
 
+:::tip
+请务必先阅读[如何正确使用酒馆助手](/guide/基本用法/如何正确使用酒馆助手.md)
+:::
+
 酒馆助手提供了函数用于更加灵活地请求 AI 生成回复，你可以通过它来自定义生成时要采用的提示词配置。
 
 :::warning
@@ -31,9 +35,9 @@ async function generate(config: GenerateConfig): Promise<string>;
 
 - **类型**: `File|string`
 - **描述**:  图片输入，支持以下格式：
-   - `File` 对象：通过 `input[type="file"]` 获取的文件对象
-   - `Base64` 字符串：图片的 base64 编码
-   - `URL` 字符串：图片的在线地址
+  - `File` 对象：通过 `input[type="file"]` 获取的文件对象
+  - `Base64` 字符串：图片的 base64 编码
+  - `URL` 字符串：图片的在线地址
 
 #### `overrides?`
 
@@ -109,9 +113,9 @@ async function generateRaw(config: GenerateConfig): Promise<string>;
 
 - **类型**: `File|string`
 - **描述**:  图片输入，支持以下格式：
-   - `File` 对象：通过 `input[type="file"]` 获取的文件对象
-   - `Base64` 字符串：图片的 base64 编码
-   - `URL` 字符串：图片的在线地址
+  - `File` 对象：通过 `input[type="file"]` 获取的文件对象
+  - `Base64` 字符串：图片的 base64 编码
+  - `URL` 字符串：图片的在线地址
 
 #### `overrides?`
 
@@ -132,8 +136,8 @@ async function generateRaw(config: GenerateConfig): Promise<string>;
 
 - **类型**: `(BuiltinPrompt | RolePrompt)[]`
 - **描述**: 一个提示词数组，数组元素将会按顺序发给 ai，因而相当于自定义预设。该数组允许存放两种类型：
-   - [`BuiltinPrompt`](./请求生成#builtinprompt): 内置提示词。由于不使用预设, 如果需要 "角色描述" 等提示词, 你需要自己指定需要使用哪些并给出顺序。如果不想自己指定, 函数会自行使用 `builtin_prompt_default_order` 中的酒馆默认预设顺序（但对于这种情况，你也许更应该用 [`generate`](./请求生成#generate)）。
-   - [`RolePrompt`](./请求生成#roleprompt): 要额外给定的提示词。
+  - [`BuiltinPrompt`](./请求生成#builtinprompt): 内置提示词。由于不使用预设, 如果需要 "角色描述" 等提示词, 你需要自己指定需要使用哪些并给出顺序。如果不想自己指定, 函数会自行使用 `builtin_prompt_default_order` 中的酒馆默认预设顺序（但对于这种情况，你也许更应该用 [`generate`](./请求生成#generate)）。
+  - [`RolePrompt`](./请求生成#roleprompt): 要额外给定的提示词。
 
 ### 返回值
 
@@ -284,6 +288,7 @@ const result = await generateRaw({
 ### `BuiltinPrompt`
 
 不指定 `ordered_prompts` 时，将使用以下默认顺序排列提示词：
+
 ```typescript
 const builtin_prompt_default_order: BuiltinPrompt[] = [
   'world_info_before',    // 世界书(角色定义前)
@@ -297,7 +302,9 @@ const builtin_prompt_default_order: BuiltinPrompt[] = [
   'user_input',           // 用户输入
 ]
 ```
+
 仅以下字符串可被 `generateRaw` 识别：
+
 ```typescript
 type BuiltinPrompt =
   | 'world_info_before'    // 世界书(角色定义前)
@@ -317,9 +324,11 @@ type BuiltinPrompt =
 在[`generateRaw`](./请求生成#generateRaw)中，`user_input`可以自由选择放置的位置了。关于`user_input`和`chat_history`的关系如下：
 
 当`chat_history`不在`ordered_prompts`：
+
 - 如果`user_input`未在 `ordered_prompts` 中：将自动添加到所有提示词的最后面
 - 如果`user_input`在 `ordered_prompts` 中：以`user_input`在 `ordered_prompts` 中的位置为准
 
 当`chat_history`在`ordered_prompts`时：
+
 - 如果`user_input`未在 `ordered_prompts` 中：将自动插入到最新一条聊天记录后
 - 如果`user_input`在 `ordered_prompts` 中：`user_input`和`chat_history`会分别插入到 `ordered_prompts` 中指示的位置
