--- a/docs/guide/功能详情/酒馆正则.md
+++ b/docs/guide/功能详情/酒馆正则.md
@@ -1,4 +1,9 @@
 # 酒馆正则
+
+:::tip
+请务必先阅读[如何正确使用酒馆助手](/guide/基本用法/如何正确使用酒馆助手.md)
+:::
+
 <CustomTOC />
 
 ## isCharacterTavernRegexesEnabled
@@ -103,7 +108,7 @@ interface TavernRegex {
 }`
 
 - **min_depth**: `number | null`
-- **max_depth**: `number | null`    
+- **max_depth**: `number | null`
 
 ### 示例
 
@@ -156,9 +161,11 @@ interface ReplaceTavernRegexesOption {
 - **描述**: 要替换的酒馆正则部分；默认为 `'all'`
 
 :::warning
+
 - **这是一个很慢的操作!** 尽量对正则做完所有事后再一次性 replaceTavernRegexes。
 - **为了重新应用正则，它会重新载入整个聊天消息**，将会触发 `tavern_events.CHAT_CHANGED` 进而重新加载全局脚本和楼层消息。
   这意味着如果你在全局脚本中运行本函数，则该函数之后的内容将不会被执行。
+
 :::
 
 ### 示例
