--- a/docs/guide/基本用法/变量管理器.md
+++ b/docs/guide/基本用法/变量管理器.md
@@ -4,6 +4,10 @@ order: 3
 
 # 变量管理器
 
+:::tip
+请务必先阅读[如何正确使用酒馆助手](/guide/基本用法/如何正确使用酒馆助手.md)
+:::
+
 变量管理器允许用户查看、编辑并实时监听不同作用域下的变量。这对于调试脚本、理解功能运行状态以及动态调整参数都非常有帮助。
 
 ![变量管理器](/变量管理器.gif)
@@ -12,29 +16,29 @@ order: 3
 
 变量管理器能够展示和操作以下四种类型的变量：
 
-*   **全局变量 (Global Variables):**
-    *   这些变量在酒馆的整个运行期间都存在，并且对所有聊天和角色都可见。
-    *   通常用于存储一些全局配置或状态信息。
-*   **角色变量 (Character Variables):**
-    *   这些变量与特定的角色卡相关联。当切换到不同的角色时，这些变量也会相应地改变。
-    *   适合存储角色特有的设置、记忆或状态。
-*   **聊天变量 (Chat Variables):**
-    *   这些变量的作用域限定在当前的聊天会话中。当开始新的聊天或切换到其他聊天时，这些变量会发生变化。
-    *   可用于存储当前对话的上下文信息、临时数据等。
-*   **楼层变量 (Floor Variables):**
-    *   这些变量与聊天记录中的特定"楼层"或消息条目相关联。
-    *   可以用来追踪特定消息的状态或附加信息。
+* **全局变量 (Global Variables):**
+  * 这些变量在酒馆的整个运行期间都存在，并且对所有聊天和角色都可见。
+  * 通常用于存储一些全局配置或状态信息。
+* **角色变量 (Character Variables):**
+  * 这些变量与特定的角色卡相关联。当切换到不同的角色时，这些变量也会相应地改变。
+  * 适合存储角色特有的设置、记忆或状态。
+* **聊天变量 (Chat Variables):**
+  * 这些变量的作用域限定在当前的聊天会话中。当开始新的聊天或切换到其他聊天时，这些变量会发生变化。
+  * 可用于存储当前对话的上下文信息、临时数据等。
+* **楼层变量 (Floor Variables):**
+  * 这些变量与聊天记录中的特定"楼层"或消息条目相关联。
+  * 可以用来追踪特定消息的状态或附加信息。
 
 ## 使用方法
 
-*   **查看变量:**
-    *   在变量管理器面板中，会清晰地列出当前可用的上述四种类型的变量及其对应的值。
-    *   变量的值会实时更新，反映其在酒馆运行过程中的任何变化。
-*   **编辑变量:**
-    *   用户可以直接在变量管理器中修改变量的值。这对于测试脚本逻辑或临时改变功能行为非常方便。
-    *   点击保存后，相关的脚本或功能会立即使用新的变量值。
-*   **实时监听:**
-    *   变量管理器会自动监听变量的变化。当任何一个被管理的变量发生改变时，其在界面上显示的值会立即更新，无需手动刷新。
+* **查看变量:**
+  * 在变量管理器面板中，会清晰地列出当前可用的上述四种类型的变量及其对应的值。
+  * 变量的值会实时更新，反映其在酒馆运行过程中的任何变化。
+* **编辑变量:**
+  * 用户可以直接在变量管理器中修改变量的值。这对于测试脚本逻辑或临时改变功能行为非常方便。
+  * 点击保存后，相关的脚本或功能会立即使用新的变量值。
+* **实时监听:**
+  * 变量管理器会自动监听变量的变化。当任何一个被管理的变量发生改变时，其在界面上显示的值会立即更新，无需手动刷新。
 
 ::: tip
 变量管理器有两个快捷入口：
