--- a/docs/guide/基本用法/播放器.md
+++ b/docs/guide/基本用法/播放器.md
@@ -4,6 +4,10 @@ order: 4
 
 # 音频播放器功能
 
+:::tip
+请务必先阅读[如何正确使用酒馆助手](/guide/基本用法/如何正确使用酒馆助手.md)
+:::
+
 本功能修改自酒馆官方扩展 [Dynamic Audio](https://github.com/SillyTavern/Extension-Audio)。
 
 **特性**:
@@ -55,9 +59,11 @@ async function audioEnable({type: 'bgm' | 'ambient', state?: boolean})
 - `state` (可选): 开启或关闭, 不填写默认为 `true`
 
 :::info 示例
+
 ```plaintext
 /audioenable type=ambient state=false
 ```
+
 :::
 
 ## audioImport
@@ -96,9 +102,11 @@ async function audioImport({type: 'bgm' | 'ambient', play?: boolean}, url: strin
 - `url`: 要播放的音频链接，可以批量导入，多个链接之间用**英文**逗号隔开
 
 :::info 示例
+
 ```plaintext
 /audioimport type=ambient play=false url=https://example.com/sound1.mp3,https://example.com/sound2.mp3
 ```
+
 :::
 
 ## audioSelect
@@ -131,9 +139,11 @@ async function audioSelect({type: 'bgm' | 'ambient'}, url: string)
 - `url`: 要播放的音频链接，如果在播放列表里不存在则先导入再播放，不可批量导入，只能填写一个链接
 
 :::info 示例
+
 ```plaintext
 /audioselect type=bgm https://example.com/song.mp3
 ```
+
 :::
 
 ## audioPlay
@@ -166,9 +176,11 @@ async function audioPlay({type: 'bgm' | 'ambient', play?: boolean})
 - `play` (可选): 播放或暂停, 不填写默认为 `true`
 
 :::info 示例
+
 ```plaintext
 /audioplay type=ambient play=false
 ```
+
 :::
 
 ## audioMode
@@ -201,7 +213,9 @@ async function audioMode({type: 'bgm' | 'ambient', mode: 'repeat' | 'random' | '
 - `mode`: 播放模式, 分别是列表循环、随机播放、单曲循环、播完停止
 
 :::info 示例
+
 ```plaintext
 /audiomode type=ambient mode=random
 ```
+
 :::
