--- a/docs/guide/基本用法/脚本库.md
+++ b/docs/guide/基本用法/脚本库.md
@@ -1,7 +1,12 @@
 ---
 order: 2
 ---
+
 # 脚本库
+
+:::tip
+请务必先阅读[如何正确使用酒馆助手](/guide/基本用法/如何正确使用酒馆助手.md)
+:::
 
 脚本库是酒馆助手的核心功能之一，用于管理和执行自动化脚本，前身为全局脚本，现在具有更完整的管理和编辑功能。
 
@@ -36,9 +41,11 @@ order: 2
 - 可以调用酒馆助手提供的 API 和功能，参考功能详情部分
 
 :::tip
+
 - 脚本可以直接使用 jQuery 的 `$` 符号控制 SillyTavern 主界面的 DOM 元素
 - 可以直接使用的库可在[内置第三方库](/guide/功能详情/其他辅助功能/内置第三方库)中查看，无需重复安装
 - 如果要在脚本关闭时执行功能，请使用 `$('unload',()=>{})`
+
 :::
 
 ### 作者备注
