--- a/docs/guide/功能详情/世界书/修改世界书.md
+++ b/docs/guide/功能详情/世界书/修改世界书.md
@@ -1,5 +1,9 @@
 # 修改世界书
 
+:::tip
+请务必先阅读[如何正确使用酒馆助手](/guide/基本用法/如何正确使用酒馆助手.md)
+:::
+
 <CustomTOC />
 
 ## setChatLorebook
@@ -17,7 +21,6 @@ async function setChatLorebook(lorebook: string | null): Promise<void>;
 
 - **类型**: `string | null`
 - **描述**: 要绑定的世界书名称，设为 null 表示移除绑定
-
 
 ## setLorebookSettings
 
@@ -75,7 +78,6 @@ async function setCurrentCharLorebooks(
 #### lorebooks
 
 - **类型**: [`Partial<CharLorebooks>`](./获取世界书#getcharlorebooks)
-- **描述**: 
+- **描述**:
   - `primary: string | null;`: 主要世界书名称，设为null或空字符串表示移除
   - `additional: string[];`: 附加世界书名称数组，设为空数组表示移除所有附加世界书
-
