--- a/docs/guide/功能详情/世界书/修改世界书条目.md
+++ b/docs/guide/功能详情/世界书/修改世界书条目.md
@@ -1,5 +1,9 @@
 # 修改世界书条目
 
+:::tip
+请务必先阅读[如何正确使用酒馆助手](/guide/基本用法/如何正确使用酒馆助手.md)
+:::
+
 <CustomTOC />
 
 ## setLorebookEntries
@@ -126,7 +130,9 @@ type LorebookEntriesUpdater =
   | ((entries: LorebookEntry[]) => Partial<LorebookEntry>[])
   | ((entries: LorebookEntry[]) => Promise<Partial<LorebookEntry>[]>);
 ```
+
 :::
+
 ### 参数
 
 #### `lorebook`
@@ -155,4 +161,4 @@ await updateLorebookEntriesWith(
 
 :::info
 有关 `LorebookEntry` 接口的完整定义，请参考 [获取世界书条目](./获取世界书条目.md#getlorebookentries) 文档。
-::: 
+:::
