--- a/docs/guide/基本用法/渲染器.md
+++ b/docs/guide/基本用法/渲染器.md
@@ -4,6 +4,10 @@ order: 1
 
 # 在楼层消息中显示前端界面
 
+:::tip
+请务必先阅读[如何正确使用酒馆助手](/guide/基本用法/如何正确使用酒馆助手.md)
+:::
+
 ## 前端显示支持
 
 使用代码块包裹需要渲染的代码部分，放置于楼层消息中即可渲染成前端界面。
@@ -38,11 +42,14 @@ order: 1
 ````
 
 :::warning
+
 1. 被扩展识别并渲染需要同时满足以下条件：
-  - 代码放置在代码块` ``` `标识中
-  - 代码中同时存在 `<body>` 和 `</body>` 标签
+
+- 代码放置在代码块` ``` `标识中
+- 代码中同时存在 `<body>` 和 `</body>` 标签
 
 2. 为防止高度无限增长，代码中的`min-height: * vh` 会被自动转换为以浏览器高度为基准，而不是以iframe高度为基准
+
 :::
 
 ## 获取角色头像
@@ -60,6 +67,7 @@ order: 1
 <!-- 或者<div class="char-avatar"></div> -->
 <!-- 或者<div class="user-avatar"></div> -->
 ```
+
 :::
 class 样式只导入了图片链接 `background-image: url('${avatarPath}');`, 没有特意设置其他样式, 具体的图片填充方式需使用者手动添加样式。
 
@@ -68,15 +76,19 @@ class 样式只导入了图片链接 `background-image: url('${avatarPath}');`, 
 头像链接已注册为宏，<code v-pre>{{userAvatarPath}}</code>和<code v-pre>{{charAvatarPath}}</code>两个宏，可直接替换为当前user和char的图像路径。
 
 :::info 示例
+
 ```html
 <div class="char_avatar" style="background-image: url('{{charAvatarPath}}');"></div>
 <div class="user_avatar" style="background-image: url('{{userAvatarPath}}');"></div>
 ```
+
 :::
 
 :::tip
+
 - 在聊天中途更换了 user 角色, 其显示逻辑与酒馆一致, 会在新的楼层显示新的头像
 - 想要将旧的楼层头像显示同步, 需要点击用户面板的同步按钮。
+
 :::
 
 ## 加载动画
@@ -84,9 +96,11 @@ class 样式只导入了图片链接 `background-image: url('${avatarPath}');`, 
 在界面内资源未加载完成时，会显示加载动画蒙版。可以在代码中任意位置放置 `<!-- disable-default-loading -->` 来禁用扩展内置的加载动画。
 
 :::info 示例
+
 ```html
 <body>
   <!-- disable-default-loading -->
 </body>
 ```
+
 :::
