正确使用酒馆助手

--- a/docs/guide/基本用法/如何正确使用酒馆助手.md
+++ b/docs/guide/基本用法/如何正确使用酒馆助手.md
@@ -11,4 +11,4 @@ order: 0
 - 酒馆助手前端界面
 - 酒馆助手脚本
 
-**请务必阅读[文档](https://sillytavern-stage-girls-dog.readthedocs.io/工具经验/酒馆助手编写环境配置)或[络络对文档的直播教程](https://discord.com/channels/1134557553011998840/1372487825471176805).**
+**请务必阅读[文档](https://sillytavern-stage-girls-dog.readthedocs.io/工具经验/酒馆助手编写环境配置)或[络络对文档的直播宝宝教程](https://discord.com/channels/1134557553011998840/1372487825471176805).**
