--- a/docs/guide/基本用法/渲染器.md
+++ b/docs/guide/基本用法/渲染器.md
@@ -5,7 +5,10 @@ order: 1
 # 在楼层消息中显示前端界面
 
 :::tip
-请务必先阅读[如何正确使用酒馆助手](/guide/基本用法/如何正确使用酒馆助手.md)
+- 请务必先阅读[如何正确使用酒馆助手](/guide/基本用法/如何正确使用酒馆助手.md)
+- 前端渲染功能具有快捷切换开关，位于输入框旁的按钮内：
+<img src="/快捷开关.jpg" width="50%" alt="快捷开关">
+
 :::
 
 ## 前端显示支持
