--- a/docs/guide/基本用法/脚本库.md
+++ b/docs/guide/基本用法/脚本库.md
@@ -14,21 +14,22 @@ order: 2
 
 ## 全局/局部脚本库
 
-脚本库分为*全局脚本库*和*局部脚本库*两个部分
+脚本库分为**全局脚本库**和**局部脚本库**两个部分
 
 其中，
 
-- 全局脚本库：适用于酒馆所有聊天
-- 局部脚本库：适用于当前角色卡，会随角色卡一同导出
+- **全局脚本库**：适用于酒馆所有聊天
+- **局部脚本库**：适用于当前角色卡，会随角色卡一同导出
 
 功能按钮：
 
-- 开关：控制脚本的运行
-- 信息：查看脚本作者编写的脚本说明
-- 编辑：修改脚本内容
-- 移动：移动到另一作用范围的脚本库
-- 导出：导出脚本配置
-- 删除：移除脚本
+- **开关**：控制脚本的运行
+- **信息**：查看脚本作者编写的脚本说明
+- **编辑**：修改脚本内容
+- **移动**：移动到另一作用范围的脚本库
+- **导出**：导出脚本配置
+- **删除**：移除脚本
+- **批量操作**：批量对脚本进行导出、删除、移动到文件夹等操作
 
 ## 脚本编辑
 
@@ -86,6 +87,18 @@ eventOnButton('button_name', function(){
 :::warning
 `button_name` 需要与设置的按键名称一致。
 :::
+
+#### 批量操作
+
+点击全局/局部脚本库旁边的齿轮按钮，可以对脚本进行批量导出、删除、移动等操作。
+
+- 批量导出：导出选中的脚本
+- 批量删除：删除选中的脚本
+- 批量移动：移动选中的脚本到某个文件夹
+
+## 脚本组
+
+脚本组可用于将多个脚本集中到一个组里，方便管理和执行。
 
 ## 内置脚本库
 
